<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/parent_layout"
    android:layout_width="209dip"
    android:layout_height="250dip"
    android:layout_alignParentEnd="true"
    android:layout_alignParentRight="true"
    android:background="@color/screenBackground"
    android:padding="16dip">

    <ImageView
        android:id="@+id/icon"
        android:layout_width="150dip"
        android:layout_height="150dip"
        android:layout_marginRight="6dip"
        android:contentDescription="@string/todo"
        android:src="@mipmap/ic_launcher" />

    <TextView
        android:id="@+id/firstLine"
        android:layout_width="150dip"
        android:layout_height="38dip"
        android:layout_alignWithParentIfMissing="true"
        android:layout_below="@id/icon"
        android:layout_centerInParent="@id/icon"
        android:ellipsize="marquee"
        android:gravity="center"
        android:text="@string/example_application"
        android:textColor="@color/TxtColor"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/secondLine"
        android:layout_width="150dip"
        android:layout_height="26dip"
        android:layout_below="@id/firstLine"
        android:layout_centerInParent="@id/icon"
        android:ellipsize="marquee"
        android:gravity="center"
        android:singleLine="true"
        android:text="@string/description"
        android:textColor="@color/TxtColor"
        android:textSize="12sp" />

</RelativeLayout>