<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    android:background="@color/screenBackground">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        tools:ignore="UselessParent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/Cover"
                android:layout_width="280dip"
                android:layout_height="280dip"
                android:contentDescription="@string/todo"
                android:layout_centerHorizontal="true"
                android:src="@mipmap/ic_launcher" />

            <TextView
                android:id="@+id/Disc_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_below="@id/Cover"
                android:layout_marginTop="20dp"
                android:text="@string/project_name"
                android:textColor="@color/TxtColor"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/Disc_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="17dp"
                android:layout_marginLeft="17dp"
                android:layout_below="@id/Disc_name"
                android:text="@string/project_date"
                android:textColor="@color/TxtColor" />


            <ImageView
                android:id="@+id/White"
                android:layout_width="220dp"
                android:layout_height="1dp"
                android:layout_below="@id/Disc_date"
                android:layout_marginTop="12dp"
                android:layout_centerHorizontal="true"
                android:contentDescription="@string/todo"
                android:src="@android:drawable/screen_background_light" />

            <TextView
                android:id="@+id/Txt_Type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="12dp"
                android:layout_below="@id/White"
                android:text="Type : "
                android:textColor="@color/TxtColor"
                android:textSize="18sp" />


            <TextView
                android:id="@+id/Disc_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_toRightOf="@id/Txt_Type"
                android:layout_toEndOf="@id/Txt_Type"
                android:layout_below="@id/White"
                android:text="@string/project_type"
                android:textColor="@color/TxtColor"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/Txt_Duree"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/Txt_Type"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:text="Durée - "
                android:textColor="@color/TxtColor"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/Disc_duree"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/Txt_Duree"
                android:layout_toEndOf="@id/Txt_Duree"
                android:layout_below="@id/Disc_type"
                android:text="@string/project_dur_e"
                android:textColor="@color/TxtColor"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/Txt_Genre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/Txt_Duree"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:text="Genre : "
                android:textColor="@color/TxtColor"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/Disc_genre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/Txt_Genre"
                android:layout_toEndOf="@id/Txt_Genre"
                android:layout_below="@id/Disc_duree"
                android:text="@string/project_genre"
                android:textColor="@color/TxtColor"
                android:textSize="18sp" />

            <ImageView
                android:id="@+id/White2"
                android:layout_width="220dp"
                android:layout_height="1dp"
                android:layout_below="@id/Disc_genre"
                android:layout_marginTop="12dp"
                android:layout_centerHorizontal="true"
                android:contentDescription="@string/todo"
                android:src="@android:drawable/screen_background_light" />

            <TextView
                android:id="@+id/Disc_description"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="12dp"
                android:layout_below="@id/White2"
                android:text="@string/project_description"
                android:textColor="@color/TxtColor"
                android:textSize="12sp"/>

            <ImageView
                android:id="@+id/Style"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:layout_below="@id/Disc_description"
                android:contentDescription="@string/todo"
                android:layout_centerHorizontal="true"
                android:src="@mipmap/ic_launcher" />

        </RelativeLayout>
    </ScrollView>
</RelativeLayout>